--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
 
 header {
     display: flex;
-    flex-flow: row wrap;
+  /*  flex-flow: row wrap;*/
     justify-content: space-between;
     align-items: center;
 
@@ -57,13 +57,6 @@ ul {
 }
 
 
-header .ul{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-}
-
 nav li {
     margin-right: 20px;
     
@@ -73,10 +66,10 @@ nav li:last-child {
     margin-right: 20px;
 }
 
-ul#menu {
-    display: flex;
+/*ul#menu {
+    display: flex;     LEO: todo este codigo esta demas porque ya en la parte mobile estas asignando codigo al ul
     font-size: 7px;
-}
+}*/
 
 
 li.menu-item a {
@@ -149,6 +142,7 @@ li.menu-item :hover {
 
 
 /* hasta aqui estamos bien con el header y empezamos la section inicio*/
+
 
 
 body{
@@ -372,19 +366,41 @@ footer p{
     
     .menuprincipal {
         display: flex;
+        align-items: center;
+        height: 90px;
         background-color: transparent;
         margin-right: 5%;
         padding: 3%;
-        border: auto;
         border: none;
 
     }
 
-    .nav {
+
+    nav {
         display: none;
         }
       
-      .mostrar-menu {
+    /*  .mostrar-menu {   LEO: no es necesario
         display: block;
+      }*/
+
+      /* AJUSTE MENU MOBILE agrego toda esta nueva sección de código*/
+
+      header.mostrar-menu {
+        flex-wrap: wrap;
+        height: 30vh;
+        align-items: flex-start;
+        transition: height 0.2s;
       }
+
+      header.mostrar-menu nav {
+        display: block;
+        width: 100%;
+      }
+
+      header.mostrar-menu ul {
+        flex-direction: column;
+        align-items: center;
+      }
+
 }
