--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lumanosimo&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
+
 
 * {
     box-sizing: border-box;
@@ -54,6 +57,7 @@ header {
 ul {
     display: flex;
     list-style: none;
+    font-family: 'Pacifico', cursive;
 }
 
 
@@ -248,7 +252,26 @@ a {
 }
 
 
-
+.descargacv {
+    background: #a1d2ba;
+    font-family: inherit;
+    padding: 0.6em 1.3em;
+    font-weight: 900;
+    font-size: 18px;
+    border: 3px solid black;
+    border-radius: 0.4em;
+    box-shadow: 0.1em 0.1em;
+  }
+  
+  .descargacv:hover {
+    transform: translate(-0.05em, -0.05em);
+    box-shadow: 0.15em 0.15em;
+  }
+  
+  .descargacv:active {
+    transform: translate(0.05em, 0.05em);
+    box-shadow: 0.05em 0.05em;
+  }
 
 /*terminamos la section inicio y empezamos contacto*/
 
@@ -375,6 +398,11 @@ footer p{
 
     }
 
+    .menu { 
+        font-size: 150%;
+    
+    }
+
 
     nav {
         display: none;
@@ -396,11 +424,79 @@ footer p{
       header.mostrar-menu nav {
         display: block;
         width: 100%;
+        margin-bottom: 3%;
       }
 
       header.mostrar-menu ul {
         flex-direction: column;
         align-items: center;
       }
+
+
+
+    /*probando el boton */
+
+    #checkbox {
+        display: none;
+      }
+      
+      .toggle {
+        position: relative;
+        width: 40px;
+        height: 40px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        transition-duration: .5s;
+      }
+      
+      .bars {
+        width: 100%;
+        height: 4px;
+        background-color: rgb(176, 92, 255);
+        border-radius: 4px;
+      }
+      
+      #bar2 {
+        transition-duration: .8s;
+      }
+      
+      #bar1,#bar3 {
+        width: 70%;
+      }
+      
+      #checkbox:checked + .toggle .bars {
+        position: absolute;
+        transition-duration: .5s;
+      }
+      
+      #checkbox:checked + .toggle #bar2 {
+        transform: scaleX(0);
+        transition-duration: .5s;
+      }
+      
+      #checkbox:checked + .toggle #bar1 {
+        width: 100%;
+        transform: rotate(45deg);
+        transition-duration: .5s;
+      }
+      
+      #checkbox:checked + .toggle #bar3 {
+        width: 100%;
+        transform: rotate(-45deg);
+        transition-duration: .5s;
+      }
+      
+      #checkbox:checked + .toggle {
+        transition-duration: .5s;
+        transform: rotate(180deg);
+      }
+
+    /*interruptor codigo*/
+
+
 
 }
