--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,13 @@
   }
   
 .light {
-    background-color: #ededed;
-    color: #000;
+    color: #ffffff;
   }
+
+.plate {
+  background-color: #cccccc;
+  color: #000000;
+}
 
 .blue {
   color: #08252d;
@@ -40,16 +44,14 @@
 /*este es mi header en menu*/
 
 .logo{
-    max-height: 90px;
+    max-height: 100px;
     border-radius: 80%;
 }
 
 header {
     display: flex;
-  /*  flex-flow: row wrap;*/
     justify-content: space-between;
     align-items: center;
-
     width: 100%;
     height: 120px;
     padding: 10px 20px;
@@ -57,7 +59,6 @@ header {
     z-index: 100;
     top: 0;
     left: 0;
-
     box-shadow: 6px 6px 10px #cecbcb;
     background-color: #26c0eb;
    
@@ -82,15 +83,19 @@ nav li:last-child {
 }
 
 
-li.menu-item a {
+li.menu-item {
     padding: 5px;
     display: inline-block;
+   
 }
 
 
 li.menu-item :hover {
     background-color: #fbfbfb;
+    border-radius: 10%;
     color: #25aaf2;
+    
+
 }
 
 .menuprincipal {
@@ -206,10 +211,11 @@ h1, h2 {
 }
 
 
-
 p {
     font-family: 'Lumanosimo', cursive;
     color: #0f0f0f;
+    line-height: 190%;
+    
 }
 
 
@@ -245,8 +251,10 @@ a {
 }
 
 
+
 .inicio{
     min-height: 20vh;
+    padding-top: 7%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -277,7 +285,7 @@ a {
   }
   
   .descargacv:hover {
-    transform: translate(-0.05em, -0.05em);
+    transform: translate(-0.1em, -0.1em);
     box-shadow: 0.15em 0.15em;
   }
   
@@ -322,21 +330,31 @@ h3{
     margin-bottom: 100px;
     justify-content: space-between;
     align-items: center;
-
     
  }
 
 
- .iconos a img {
+ .iconos img {
     max-width: 40%;
     height: auto;
     align-items:center;
-    margin-left: 30%;
+    margin: 30%;
+    padding: 4%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease-in-out
  }
 
 .icono {
     border-radius:150%;
    
+}
+
+
+.icono img:hover {
+  filter: brightness(150%);
+  background-color: #d65a1c;
+  border-radius: 30%;
+  transform: scale(1.8);
 }
 
 
@@ -352,8 +370,9 @@ h3{
 
 footer {
     background-color: #26c0eb;
-    color:  #fbfbfb;
     height: 90px;
+    padding: 3%;
+    padding-bottom: 5%;
 }
 
 footer p{
@@ -361,7 +380,7 @@ footer p{
     align-items: center;
     justify-content: center;
     height: 100%;
-    color: #ffffff;
+    color: #000000;
 }
 
 
